<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_tabiyat">

    <fragment
        android:id="@+id/navigation_liked"
        android:name="com.example.tabiyat.ui.main.liked.LikedFragment"
        android:label="@string/liked"
        tools:layout="@layout/liked_fragment">
        <action
            android:id="@+id/action_navigation_liked_to_cardDetailFragment"
            app:destination="@id/plantsDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_liked_to_notificationsFragment"
            app:destination="@id/menuNotifications" />
    </fragment>
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.tabiyat.ui.main.map.MapsFragment"
        android:label="@string/what_is_near"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_navigation_map_to_notificationsFragment"
            app:destination="@id/menuNotifications"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_map_to_cardObservationFragment"
            app:destination="@id/cardObservationFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_tabiyat"
        android:name="com.example.tabiyat.ui.main.tabiyat.TabiyatFragment"
        android:label="@string/tabiyat"
        tools:layout="@layout/tabiyat_fragment">
        <action
            android:id="@+id/action_navigation_tabiyat_to_plantsFragment"
            app:destination="@id/plantsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_tabiyat_to_notificationsFragment"
            app:destination="@id/menuNotifications" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tabiyat.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment">
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/menuSettings"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_profile_to_ratingFragment"
            app:destination="@id/ratingFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_navigation_profile_to_observationsFragment"
            app:destination="@id/observationsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/plantsFragment"
        android:name="com.example.tabiyat.ui.main.tabiyat.PlantsFragment"
        android:label="@string/plants"
        tools:layout="@layout/plants_fragment">
        <action
            android:id="@+id/action_plantsFragment_to_cardDetailFragment"
            app:destination="@id/plantsDetailFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_plantsFragment_to_notificationsFragment"
            app:destination="@id/menuNotifications"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/plantsDetailFragment"
        android:name="com.example.tabiyat.ui.main.tabiyat.CardDetailFragment"
        android:label="Карточка вида" >
        <action
            android:id="@+id/action_plantsDetailFragment_to_observationsFragment"
            app:destination="@id/observationsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_plantsDetailFragment_to_addObservationFragment"
            app:destination="@id/addObservationFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/menuSettings"
        android:name="com.example.tabiyat.ui.main.profile.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" >
        <action
            android:id="@+id/action_menuSettings_to_accountFragment"
            app:destination="@id/accountFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_menuSettings_to_projectInfoFragment"
            app:destination="@id/projectInfoFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/menuNotifications"
        android:name="com.example.tabiyat.ui.main.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/notifications_fragment" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.tabiyat.ui.main.profile.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/account_fragment" />
    <fragment
        android:id="@+id/projectInfoFragment"
        android:name="com.example.tabiyat.ui.main.profile.ProjectInfoFragment"
        android:label="@string/about_project"
        tools:layout="@layout/project_info_fragment" />
    <fragment
        android:id="@+id/observationsFragment"
        android:name="com.example.tabiyat.ui.main.tabiyat.ObservationsFragment"
        android:label="@string/observations"
        tools:layout="@layout/observations_fragment" >
        <action
            android:id="@+id/action_observationsFragment_to_cardObservationFragment"
            app:destination="@id/cardObservationFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/cardObservationFragment"
        android:name="com.example.tabiyat.ui.main.tabiyat.CardObservationFragment"
        android:label="@string/card_observation"
        tools:layout="@layout/card_observation_fragment" >
    </fragment>
    <fragment
        android:id="@+id/ratingFragment"
        android:name="com.example.tabiyat.ui.main.profile.RatingFragment"
        android:label="@string/rating_users"
        tools:layout="@layout/rating_fragment" />
    <fragment
        android:id="@+id/addObservationFragment"
        android:name="com.example.tabiyat.ui.main.addObservatrion.AddObservationFragment"
        android:label="Наблюдения растения"
        tools:layout="@layout/add_observation_fragment" />
</navigation>